--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
-      background: url('mars-background.jpg') no-repeat center center fixed;
+      background: url('mars-background.jpeg') no-repeat center center fixed;
       background-size: cover;
       color: white;
       text-align: center;
