--- a/index.html
+++ b/index.html
@@ -8,26 +8,50 @@
   <style>
     body {
       margin: 0;
+      padding: 0;
       font-family: 'Inter', sans-serif;
       background: url('mars-background.jpeg') no-repeat center center fixed;
       background-size: cover;
       color: white;
-      text-align: center;
-      padding: 4rem 1rem;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
     }
+
+    .container {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 2rem;
+      text-align: center;
+    }
+
     h1 {
       font-family: 'Orbitron', sans-serif;
       font-size: 3rem;
       margin-bottom: 1rem;
+      text-shadow: 1px 1px 2px #000;
     }
+
     p {
-      max-width: 700px;
-      margin: 0 auto 2rem;
       font-size: 1.2rem;
+      max-width: 700px;
+      margin-bottom: 4rem;
+      text-shadow: 1px 1px 2px #000;
     }
+
+    .button-bar {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 1rem;
+      padding: 2rem 1rem;
+      background: rgba(0, 0, 0, 0.4);
+    }
+
     .button {
-      display: inline-block;
-      margin: 0.5rem;
       padding: 0.75rem 1.5rem;
       background: #fff;
       color: #000;
@@ -35,16 +59,26 @@
       text-decoration: none;
       border-radius: 8px;
       transition: background 0.3s ease;
+      box-shadow: 1px 1px 5px rgba(0,0,0,0.3);
     }
+
     .button:hover {
       background: #eaeaea;
+    }
+
+    @media (max-width: 600px) {
+      h1 { font-size: 2rem; }
+      p { font-size: 1rem; }
     }
   </style>
 </head>
 <body>
-  <h1>Interplanetary Coin (IPC)</h1>
-  <p>The decentralized currency for Earth, Mars, and beyond. Built by a father, for his family—and the future.</p>
-  <div>
+  <div class="container">
+    <h1>Interplanetary Coin (IPC)</h1>
+    <p>The decentralized currency for Earth, Mars, and beyond. Built by a father, for his family—and the future.</p>
+  </div>
+
+  <div class="button-bar">
     <a href="https://etherscan.io/token/0xb63034B995d6305C6237B0856603be2224994FC6" class="button" target="_blank">View on Etherscan</a>
     <a href="https://www.dextools.io/app/en/ether/pair-explorer/0x0ccb04d2a8b412b5a43df351ae6c5792b513b007" class="button" target="_blank">DEXTools 10M Pool</a>
     <a href="#" class="button">Whitepaper</a>
