--- a/index.html
+++ b/index.html
@@ -8,6 +8,106 @@
   <style>
     body {
       margin: 0;
+      font-family: 'Inter', sans-serif;
+      background: url('mars-background.jpeg') no-repeat center center fixed;
+      background-size: cover;
+      color: white;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
+
+    .container {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+      padding: 4rem 2rem 2rem;
+      text-align: center;
+    }
+
+    .logo {
+      width: 220px;
+      max-width: 80%;
+      margin-bottom: 1rem;
+    }
+
+    .subtitle {
+      font-size: 1rem;
+      text-shadow: 1px 1px 2px #000;
+      margin-bottom: 2rem;
+    }
+
+    h1 {
+      font-family: 'Orbitron', sans-serif;
+      font-size: 2.8rem;
+      margin-bottom: 1rem;
+      text-shadow: 1px 1px 2px #000;
+    }
+
+    p {
+      font-size: 1.2rem;
+      max-width: 700px;
+      text-shadow: 1px 1px 2px #000;
+      margin-bottom: 2rem;
+    }
+
+    .button-bar {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 1rem;
+      padding: 2rem 1rem;
+      background: rgba(0, 0, 0, 0.4);
+    }
+
+    .button {
+      padding: 0.75rem 1.5rem;
+      background: #fff;
+      color: #000;
+      font-weight: bold;
+      text-decoration: none;
+      border-radius: 8px;
+      transition: background 0.3s ease;
+      box-shadow: 1px 1px 5px rgba(0,0,0,0.3);
+    }
+
+    .button:hover {
+      background: #eaeaea;
+    }
+
+    @media (max-width: 600px) {
+      h1 { font-size: 2rem; }
+      p { font-size: 1rem; }
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <img src="ipc-logo.png" alt="Interplanetary Coin Logo" class="logo" />
+    <div class="subtitle">The decentralized currency for Earth, Mars, and beyond.</div>
+    <h1>Interplanetary Coin (IPC)</h1>
+    <p>Built by a father, for his family—and the future.</p>
+  </div>
+
+  <div class="button-bar">
+    <a href="https://etherscan.io/token/0xb63034B995d6305C6237B0856603be2224994FC6" class="button" target="_blank">Etherscan</a>
+    <a href="https://www.dextools.io/app/en/ether/pair-explorer/0x0ccb04d2a8b412b5a43df351ae6c5792b513b007" class="button" target="_blank">DEXTools</a>
+    <a href="#" class="button">Whitepaper</a>
+  </div>
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Interplanetary Coin (IPC)</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Inter&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
       padding: 0;
       font-family: 'Inter', sans-serif;
       background: url('mars-background.jpeg') no-repeat center center fixed;
