--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Interplanetary Coin (IPC)</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Inter&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Inter&display=swap" rel="stylesheet" />
   <style>
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
-      background: url('mars-background.jpeg') no-repeat center center fixed;
+      background: url('mars-background.jpg') no-repeat center center fixed;
       background-size: cover;
       color: white;
       display: flex;
@@ -28,29 +28,32 @@
     }
 
     .logo {
-      width: 220px;
-      max-width: 80%;
+      width: 160px;
+      height: 160px;
+      border-radius: 50%;
+      object-fit: cover;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
       margin-bottom: 1rem;
     }
 
     .subtitle {
       font-size: 1rem;
+      margin-bottom: 1.5rem;
       text-shadow: 1px 1px 2px #000;
-      margin-bottom: 2rem;
     }
 
     h1 {
       font-family: 'Orbitron', sans-serif;
-      font-size: 2.8rem;
+      font-size: 2.6rem;
       margin-bottom: 1rem;
       text-shadow: 1px 1px 2px #000;
     }
 
     p {
-      font-size: 1.2rem;
+      font-size: 1.1rem;
       max-width: 700px;
-      text-shadow: 1px 1px 2px #000;
       margin-bottom: 2rem;
+      text-shadow: 1px 1px 2px #000;
     }
 
     .button-bar {
