--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       flex: 1;
       display: flex;
       flex-direction: column;
-      justify-content: flex-start;
+      justify-content: center;
       align-items: center;
-      padding: 4rem 2rem 2rem;
+      padding: 4rem 2rem;
       text-align: center;
     }
 
@@ -37,20 +37,20 @@
     }
 
     .subtitle {
-      font-size: 1rem;
+      font-size: 1.1rem;
       margin-bottom: 1.5rem;
       text-shadow: 1px 1px 2px #000;
     }
 
     h1 {
       font-family: 'Orbitron', sans-serif;
-      font-size: 2.6rem;
+      font-size: 2.8rem;
       margin-bottom: 1rem;
       text-shadow: 1px 1px 2px #000;
     }
 
     p {
-      font-size: 1.1rem;
+      font-size: 1.2rem;
       max-width: 700px;
       margin-bottom: 2rem;
       text-shadow: 1px 1px 2px #000;
