--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="ipc-logo.png" alt="Interplanetary Coin Logo" class="logo" />
+    <img src="ipc-logo.png" //alt="Interplanetary Coin Logo" class="logo" />
     <div class="subtitle">The decentralized currency for Earth, Mars, and beyond.</div>
     <h1>Interplanetary Coin (IPC)</h1>
     <p>Built by a father, for his family—and the future.</p>
