--- a/index.html
+++ b/index.html
@@ -21,32 +21,33 @@
       flex: 1;
       display: flex;
       flex-direction: column;
-      justify-content: center;
+      justify-content: flex-start;
       align-items: center;
-      padding: 5rem 2rem 2rem;
+      padding: 8rem 2rem 2rem;
       text-align: center;
     }
 
     .logo {
-      width: 180px;
-      height: 180px;
+      width: 200px;
+      height: 200px;
       border-radius: 50%;
       object-fit: cover;
-      box-shadow: 0 0 12px rgba(0, 0, 0, 0.6);
-      margin-bottom: 1.5rem;
+      margin-bottom: 2.5rem;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
     }
 
     .subtitle {
-      font-size: 1.2rem;
+      font-size: 1.4rem;
       margin-bottom: 2rem;
       text-shadow: 1px 1px 2px #000;
       font-weight: 600;
     }
 
     p {
-      font-size: 1.15rem;
-      max-width: 700px;
-      margin-bottom: 2.5rem;
+      font-size: 1.3rem;
+      max-width: 720px;
+      margin-bottom: 3rem;
+      line-height: 1.6;
       text-shadow: 1px 1px 2px #000;
     }
 
@@ -55,7 +56,7 @@
       justify-content: center;
       flex-wrap: wrap;
       gap: 1rem;
-      padding: 2rem 1rem;
+      padding: 2.5rem 1rem;
       background: rgba(0, 0, 0, 0.4);
     }
 
@@ -76,7 +77,7 @@
 
     @media (max-width: 600px) {
       .logo { width: 140px; height: 140px; }
-      .subtitle { font-size: 1rem; }
+      .subtitle { font-size: 1.1rem; }
       p { font-size: 1rem; }
     }
   </style>
