--- a/index.html
+++ b/index.html
@@ -75,25 +75,39 @@
       background: #eaeaea;
     }
 
-@media (max-width: 600px) {
+    footer {
+      background-color: rgba(0, 0, 0, 0.7);
+      padding: 2rem 1rem;
+      font-size: 0.85rem;
+      color: #ccc;
+      text-align: center;
+      line-height: 1.6;
+    }
+
+    @media (max-width: 600px) {
       .logo { width: 140px; height: 140px; }
       .subtitle { font-size: 1.1rem; }
       p { font-size: 1rem; }
-   
+    }
   </style>
 </head>
 <body>
   <div class="container">
-  <!--  <img src="ipc-logo.png" alt="Interplanetary Coin Logo" class="logo" /> -->
+    <img src="ipc-logo.png" alt="Interplanetary Coin Logo" class="logo" />
     <div class="subtitle">The decentralized currency for Earth, Mars, and beyond.</div>
-    <p></p>
     <p>Built by a father, for his family—and the future.</p>
   </div>
 
   <div class="button-bar">
     <a href="https://etherscan.io/token/0xb63034B995d6305C6237B0856603be2224994FC6" class="button" target="_blank">Etherscan</a>
     <a href="https://www.dextools.io/app/en/ether/pair-explorer/0x0ccb04d2a8b412b5a43df351ae6c5792b513b007" class="button" target="_blank">DEXTools</a>
-    <a href="#" class="button">Whitepaper</a>
+    <a href="Interplanetary_Coin_Whitepaper_v1.pdf" class="button" download>Whitepaper</a>
   </div>
+
+  <footer>
+    <p><strong>Disclaimer:</strong> This website and all associated materials are provided for informational purposes only and do not constitute financial advice, investment solicitation, or legal counsel.</p>
+    <p>Interplanetary Coin (IPC) is a decentralized project. Users are solely responsible for their investment decisions. Always do your own research and consult with a financial advisor.</p>
+    <p>&copy; 2025 Interplanetary Coin. All rights reserved.</p>
+  </footer>
 </body>
 </html>
