--- a/index.html
+++ b/index.html
@@ -70,10 +70,18 @@
         <h1>Interplanetary Coin (IPC)</h1>
         <p>Decentralized Currency for Earth, Mars & Beyond.</p>
         <div class="button-group">
-            <a href="https://www.dextools.io/" target="_blank">DEXTools</a>
-            <a href="https://www.interplanetarycoin.cash/whitepaper.pdf" target="_blank">Whitepaper</a>
+            <a href="https://www.dextools.io/app/en/ether/pair-explorer/0x0ccb04d2a8b412b5a43df351ae6c5792b513b007?t=1745092169759" target="_blank">DEXTools</a>
+            <a href="https://github.com/AdebowaleNoble/interplanetary-coin-site/blob/main/interplanetary_coin_whitepaper_v1.pdf" target="_blank">Whitepaper</a>
             <a href="https://www.interplanetarycoin.cash/claim" target="_blank">Claim IPC</a>
         </div>
     </div>
+    <footer style="text-align: center; color: gray; font-size: 0.8rem; padding: 2rem 1rem;">
+  <hr style="margin: 2rem auto; width: 80%; border-color: #444;" />
+  <p>
+    © 2025 Interplanetary Coin (IPC). All rights reserved. <br/>
+    "Interplanetary Coin", "IPC", and the IPC logo are trademarks of the project founder. Trademark registration pending. <br/>
+    This website and whitepaper are for informational purposes only and do not constitute financial, investment, or legal advice.
+  </p>
+</footer>
 </body>
 </html>
