--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <p>Decentralized Currency for Earth, Mars & Beyond.</p>
         <div class="button-group">
             <a href="https://www.dextools.io/app/en/ether/pair-explorer/0x0ccb04d2a8b412b5a43df351ae6c5792b513b007?t=1745092169759" target="_blank">DEXTools</a>
-            <a href="https://github.com/AdebowaleNoble/interplanetary-coin-site/blob/main/interplanetary_coin_whitepaper_v1.pdf" target="_blank">Whitepaper</a>
+            <a href="interplanetary_coin_whitepaper_v1.pdf" target="_blank">Whitepaper</a>
             <a href="https://www.interplanetarycoin.cash/claim" target="_blank">Claim IPC</a>
         </div>
     </div>
