--- a/index.html
+++ b/index.html
@@ -76,6 +76,19 @@
         </div>
     </div>
     <footer style="text-align: center; color: gray; font-size: 0.8rem; padding: 2rem 1rem;">
+        <section id="token-info" style="margin-top: 2rem; text-align: center;">
+  <h3>📜 IPC Token Info</h3>
+  <p><strong>Contract Address:</strong> 
+    <a href="https://etherscan.io/token/0xb63034B995d6305C6237B0856603be2224994FC6" target="_blank">
+      0xb63034B995d6305C6237B0856603be2224994FC6
+    </a>
+  </p>
+  <p><strong>DEXTools Chart:</strong> 
+    <a href="https://www.dextools.io/app/en/ether/pair-explorer/0x0CcB04d2a8b412b5a43df351ae6c5792b513b007" target="_blank">
+      View IPC/WETH Pair
+    </a>
+  </p>
+</section>
   <hr style="margin: 2rem auto; width: 80%; border-color: #444;" />
   <p>
     © 2025 Interplanetary Coin (IPC). All rights reserved. <br/>
